traversal.snake.Snake.scala.error
Compilation error:
Snake:2: warning: enclosing method test_fin has result type Unit: return value discarded
                                                                                                           test=(!isFacingWall); right()}; if (getDirection()==Direction.WEST) {right(); test=(!isFacingWall); left()}; return(test)}
                                                                                                                                                                                                                        ^Snake:4: error: not found: value &&
  while(!isFacingWall)&&(!test2) {forward(); test2=test_fin()};
                      ^Snake:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while(!isFacingWall)&&(!test2) {forward(); test2=test_fin()};
                                                           ^